# Ad-Wolf

./: Cargo.toml  Dockerfile  README.md  config.example.toml  dns-filter.service
.github/workflows/: ci.yml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/wix/: main.wxs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  stats.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs
crates/filter/: Cargo.toml
crates/filter/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  main.rs
crates/upstream/: Cargo.toml
crates/upstream/src/: lib.rs
gui/: index.html  package.json
gui/src/: App.css  App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
lists/: custom.txt
scripts/: package.sh
src/: config.rs  lib.rs  main.rs
src/dns/: cache.rs  mod.rs  server.rs  upstream.rs
src/filter/: engine.rs  loader.rs  matcher.rs  mod.rs  parser.rs
src/rules/: engine.rs  loader.rs  parser.rs
