[workspace]
members = [
    "crates/core",
    "crates/filter",
    "crates/dns",
    "crates/cache",
    "crates/upstream",
    "crates/config",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DNS Filter Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-proto = "0.23"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
