[workspace]
members = [
    "crates/core",
    "crates/filter",
    "crates/dns",
    "crates/cache",
    "crates/upstream",
    "crates/config",
    "crates/cli",
    "crates/storage",
    "crates/tui",
    "crates/metrics",
    "gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DNS Filter Contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
trust-dns-proto = "0.23"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"
url = "2"
notify = "8"
futures-util = "0.3"
arc-swap = "1"
axum = "0.7"
prometheus-client = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
