[package]
name = "dns-filter-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for DNS filter"

[dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
dns-filter-core = { path = "../core" }
dns-filter-dns = { path = "../dns" }
dns-filter-config = { path = "../config" }
dns-filter-filter = { path = "../filter" }
dns-filter-upstream = { path = "../upstream" }
dns-filter-cache = { path = "../cache" }
