[package]
name = "dns-filter-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI interface for DNS filter"

[[bin]]
name = "dns-filter"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "DNS Filter Contributors"
depends = ""
section = "net"
priority = "optional"
assets = [
    ["target/release/dns-filter", "usr/bin/dns-filter", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dns-filter", dest = "/usr/bin/dns-filter", mode = "755" },
]

[dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
dns-filter-core = { path = "../core" }
dns-filter-dns = { path = "../dns" }
dns-filter-config = { path = "../config" }
dns-filter-filter = { path = "../filter" }
dns-filter-upstream = { path = "../upstream" }
dns-filter-cache = { path = "../cache" }
notify.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
dns-filter-storage = { path = "../storage" }
dns-filter-metrics = { path = "../metrics" }
