[package]
name = "dns-filter-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration and settings management"

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
