[package]
name = "dns-filter-filter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rule matching and filtering engine"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
serde.workspace = true
dns-filter-core = { path = "../core" }
