[package]
name = "dns-filter-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent query log storage using SQLite"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
