[package]
name = "dns-filter-upstream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Upstream resolver handling"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
url.workspace = true
webpki-roots.workspace = true
