[package]
name = "ad-wolf-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

# Internal DNS filter workspace crates
dns-filter-core = { path = "../../crates/core" }
dns-filter-storage = { path = "../../crates/storage" }
dns-filter-config = { path = "../../crates/config" }
dns-filter-filter = { path = "../../crates/filter" }
dns-filter-dns = { path = "../../crates/dns" }
dns-filter-upstream = { path = "../../crates/upstream" }
dns-filter-cache = { path = "../../crates/cache" }
